# http-server-stabilizer

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  hostname.go  main.go
